# R-dyntrace

./: .Rprofile  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  CONFIGURE  Makeconf.in  README.md  SVN-REVISION  _config.yml  build  build-tracer.sh  build.sh  compose_testable_vignettes.R  configure  configure.ac  dbg_vignettes.sh  fold_databases.R  index.md  install-r-package-anthology.R  install_top_100_CRAN_packages.r  prepare_database.sh  promise-lifespan.Rmd  promise-strictness.sh  r-package-anthology.csv  r-package-anthology.r  report-basic.r  report-uncompiled.Rmd  report.Rmd  run_vignettes.sh  sanity_check_vignettes.sh  test.sh  top_100_CRAN_packages.txt  vignette_summary.R
.github/workflows/: check-all.yaml  check.yaml
R.xcodeproj/: project.pbxproj
R.xcodeproj/xcuserdata/krikava.xcuserdatad/xcschemes/: R.xcscheme  xcschememanagement.plist
doc/: FAQ  NEWS
doc/html/: NEWS.html  R-admin.html  resources.html
examples/: ex.r
m4/: R.m4
rdt-plugins/promises/: .clang-format  CMakeLists.txt
rdt-plugins/promises/R/: analysis.R  benchmark.R  compile_base.R  utils.R
rdt-plugins/promises/SQL/: indices.sql  promise-force-order.sql  promise-strictness.sql  schema.sql
rdt-plugins/promises/analysis/: analysis.R  benchmark.R  lifespan.Rmd  type-distribution.Rmd
rdt-plugins/promises/analysis/SQL/: promise-force-order.sql  promise-strictness.sql
rdt-plugins/promises/data/: r-package-anthology.csv
rdt-plugins/promises/database/: indices.sql  schema.sql
rdt-plugins/promises/scripts/: compose_testable_vignettes.R  dbg_vignettes.sh  fold_databases.R  install_packages.sh  promise-force-order.sh  sample_packages.R  sanity-check.R  trace  vignette_summary.R
rdt-plugins/promises/src/: SqlSerializer.cpp  SqlSerializer.hpp  State.cpp  State.hpp  globals.cpp  globals.hpp  helpers.cpp  hooks.cpp  hooks.hpp  multiplexer.cpp  multiplexer.h  psql_recorder.cpp  psql_recorder.h  rdt_promises.cpp  rdt_promises.h  recorder.cpp  recorder.h  recorder.hpp  sql_generator.cpp  sql_generator.h  sql_recorder.cpp  sql_recorder.h  tools.h  trace_recorder.cpp  trace_recorder.h  tracer.cpp  tracer.hpp  tracer_conf.cpp  tracer_conf.h  tracer_sexpinfo.cpp  tracer_sexpinfo.h  tracer_state.cpp  tracer_state.h  tuple_for_each.h  utilities.cpp  utilities.hpp
reports/: functions.R  make_report.R  template.Rmd  vignettes.Rmd
share/dtrace/: allocations.dtrace  calltime-all.dtrace  calltime.dtrace  eval.dtrace  flowinfo.dtrace  methods-count.dtrace
share/make/: vars.mk
src/gnuwin32/installer/: CustomMsg.iss  code.iss  header1.iss  reg.iss  reg3264.iss
src/include/: Defn.h  Internal.h  Makefile.in  R.h  Rdyntrace.h  Rinternals.h  config.h.in
src/main/: Makefile.in  Makefile.win  attrib.c  bind.c  builtin.c  coerce.c  context.c  deparse.c  deparse.h  duplicate.c  dyntrace.c  envir.c  errors.c  eval.c  inspect.c  inspect.h  main.c  memory.c  names.c  objects.c  rdt_handler_echo.c  rdt_handler_flowinfo.c  rdtrace.c  rdtrace.h  rdtrace.probes  serialize.c  sort.c  subassign.c  subset.c  summary.c
src/scripts/: config  javareconf.in
src/unix/: Rscript.c
tests/: demos.Rout.save  primitives.R
tools/ci/: before_install-debug.sh  before_install-osx.sh  build.sh
