cmake_minimum_required(VERSION 3.6)
project(R_3_3_1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

add_definitions(-DHAVE_CONFIG_H)

set(SOURCE_FILES
        include/R.h
        include/R_ext/Applic.h
        include/R_ext/Arith.h
        include/R_ext/BLAS.h
        include/R_ext/Boolean.h
        include/R_ext/Callbacks.h
        include/R_ext/Complex.h
        include/R_ext/Connections.h
        include/R_ext/Constants.h
        include/R_ext/Error.h
        include/R_ext/GetX11Image.h
        include/R_ext/GraphicsDevice.h
        include/R_ext/GraphicsEngine.h
        include/R_ext/Itermacros.h
        include/R_ext/Lapack.h
        include/R_ext/Linpack.h
        include/R_ext/MathThreads.h
        include/R_ext/Memory.h
        include/R_ext/Parse.h
        include/R_ext/Print.h
        include/R_ext/PrtUtil.h
        include/R_ext/QuartzDevice.h
        include/R_ext/R-ftp-http.h
        include/R_ext/RS.h
        include/R_ext/RStartup.h
        include/R_ext/Rallocators.h
        include/R_ext/Random.h
        include/R_ext/Rdynload.h
        include/R_ext/Riconv.h
        include/R_ext/Utils.h
        include/R_ext/Visibility.h
        include/R_ext/eventloop.h
        include/R_ext/libextern.h
        include/R_ext/stats_package.h
        include/R_ext/stats_stubs.h
        include/Rconfig.h
        include/Rdefines.h
        include/Rembedded.h
        include/Rinterface.h
        include/Rinternals.h
        include/Rmath.h
        include/Rversion.h
        include/S.h
        include/libintl.h
        src/appl/integrate.c
        src/appl/interv.c
        src/appl/lbfgsb.c
        src/appl/maxcol.c
        src/appl/optim.c
        src/appl/pretty.c
        src/appl/uncmin.c
        src/extra/blas/blas00.c
        src/extra/graphapp/arith.c
        src/extra/graphapp/array.c
        src/extra/graphapp/bitmaps.c
        src/extra/graphapp/buttons.c
        src/extra/graphapp/clipboard.c
        src/extra/graphapp/context.c
        src/extra/graphapp/controls.c
        src/extra/graphapp/cursors.c
        src/extra/graphapp/dialogs.c
        src/extra/graphapp/drawing.c
        src/extra/graphapp/drawtext.c
        src/extra/graphapp/events.c
        src/extra/graphapp/fonts.c
        src/extra/graphapp/ga.h
        src/extra/graphapp/gbuttons.c
        src/extra/graphapp/gdraw.c
        src/extra/graphapp/gif.c
        src/extra/graphapp/gimage.c
        src/extra/graphapp/gmenus.c
        src/extra/graphapp/graphapp.h
        src/extra/graphapp/image.c
        src/extra/graphapp/init.c
        src/extra/graphapp/internal.h
        src/extra/graphapp/menus.c
        src/extra/graphapp/metafile.c
        src/extra/graphapp/objects.c
        src/extra/graphapp/printer.c
        src/extra/graphapp/rgb.c
        src/extra/graphapp/status.c
        src/extra/graphapp/stdimg.c
        src/extra/graphapp/stdimg.h
        src/extra/graphapp/str.h
        src/extra/graphapp/strings.c
        src/extra/graphapp/tooltips.c
        src/extra/graphapp/windows.c
        src/extra/intl/bindtextdom.c
        src/extra/intl/charsetalias.h
        src/extra/intl/dcgettext.c
        src/extra/intl/dcigettext.c
        src/extra/intl/dcngettext.c
        src/extra/intl/dgettext.c
        src/extra/intl/dngettext.c
        src/extra/intl/eval-plural.h
        src/extra/intl/explodename.c
        src/extra/intl/finddomain.c
        src/extra/intl/gettext.c
        src/extra/intl/gettextP.h
        src/extra/intl/gmo.h
        src/extra/intl/hash-string.c
        src/extra/intl/hash-string.h
        src/extra/intl/intl-compat.c
        src/extra/intl/intl-exports.c
        src/extra/intl/l10nflist.c
        src/extra/intl/langprefs.c
        src/extra/intl/libgnuintl.h
        src/extra/intl/loadinfo.h
        src/extra/intl/loadmsgcat.c
        src/extra/intl/localcharset.c
        src/extra/intl/localcharset.h
        src/extra/intl/localename.c
        src/extra/intl/lock.c
        src/extra/intl/lock.h
        src/extra/intl/ngettext.c
        src/extra/intl/osdep.c
        src/extra/intl/plural-exp.c
        src/extra/intl/plural-exp.h
        src/extra/intl/plural.c
        src/extra/intl/printf-args.c
        src/extra/intl/printf-args.h
        src/extra/intl/printf-parse.c
        src/extra/intl/printf-parse.h
        src/extra/intl/printf.c
        src/extra/intl/textdomain.c
        src/extra/intl/tsearch.c
        src/extra/intl/tsearch.h
        src/extra/intl/vasnprintf.c
        src/extra/intl/vasnprintf.h
        src/extra/intl/vasnwprintf.h
        src/extra/intl/wprintf-parse.h
        src/extra/intl/xsize.h
        src/extra/tre/regcomp.c
        src/extra/tre/regerror.c
        src/extra/tre/regexec.c
        src/extra/tre/tre-ast.c
        src/extra/tre/tre-ast.h
        src/extra/tre/tre-compile.c
        src/extra/tre/tre-compile.h
        src/extra/tre/tre-config.h
        src/extra/tre/tre-internal.h
        src/extra/tre/tre-match-approx.c
        src/extra/tre/tre-match-backtrack.c
        src/extra/tre/tre-match-parallel.c
        src/extra/tre/tre-match-utils.h
        src/extra/tre/tre-mem.c
        src/extra/tre/tre-mem.h
        src/extra/tre/tre-parse.c
        src/extra/tre/tre-parse.h
        src/extra/tre/tre-stack.c
        src/extra/tre/tre-stack.h
        src/extra/tre/tre.h
        src/extra/tre/xmalloc.c
        src/extra/tre/xmalloc.h
        src/extra/trio/compat.c
        src/extra/trio/strio.h
        src/extra/trio/trio.c
        src/extra/trio/trio.h
        src/extra/trio/triodef.h
        src/extra/trio/trionan.c
        src/extra/trio/trionan.h
        src/extra/trio/triop.h
        src/extra/trio/triostr.c
        src/extra/trio/triostr.h
        src/extra/tzone/localtime.c
        src/extra/tzone/registryTZ.c
        src/extra/tzone/strftime.c
        src/extra/tzone/tzfile.h
        src/extra/win_iconv/win_iconv.c
        src/extra/xdr/rpc/types.h
        src/extra/xdr/rpc/xdr.h
        src/extra/xdr/xdr.c
        src/extra/xdr/xdr_float.c
        src/extra/xdr/xdr_mem.c
        src/extra/xdr/xdr_stdio.c
        src/gnuwin32/console.c
        src/gnuwin32/console.h
        src/gnuwin32/consolestructs.h
        src/gnuwin32/dos_wglob.c
        src/gnuwin32/dos_wglob.h
        src/gnuwin32/dynload.c
        src/gnuwin32/editor.c
        src/gnuwin32/editor.h
        src/gnuwin32/embeddedR.c
        src/gnuwin32/extra.c
        src/gnuwin32/fixed/h/Rconfig.h
        src/gnuwin32/fixed/h/config.h
        src/gnuwin32/fixed/h/iconv.h
        src/gnuwin32/fixed/h/psignal.h
        src/gnuwin32/fixed/h/trioremap.h
        src/gnuwin32/front-ends/R.c
        src/gnuwin32/front-ends/RSetReg.c
        src/gnuwin32/front-ends/Renviron.c
        src/gnuwin32/front-ends/Rfe.c
        src/gnuwin32/front-ends/graphappmain.c
        src/gnuwin32/front-ends/open.c
        src/gnuwin32/front-ends/rcmd.c
        src/gnuwin32/front-ends/rcmdfn.c
        src/gnuwin32/front-ends/rgui.c
        src/gnuwin32/front-ends/rpwd.c
        src/gnuwin32/front-ends/rterm.c
        src/gnuwin32/front-ends/rtest.c
        src/gnuwin32/getline/getline.c
        src/gnuwin32/getline/getline.h
        src/gnuwin32/getline/testgl.c
        src/gnuwin32/getline/wc_history.c
        src/gnuwin32/getline/wc_history.h
        src/gnuwin32/guicolors.h
        src/gnuwin32/installer/uuidgen.c
        src/gnuwin32/malloc.c
        src/gnuwin32/opt.c
        src/gnuwin32/opt.h
        src/gnuwin32/pager.c
        src/gnuwin32/preferences.c
        src/gnuwin32/preferences.h
        src/gnuwin32/psignal.c
        src/gnuwin32/rgui_UTF8.h
        src/gnuwin32/rhome.c
        src/gnuwin32/rt_complete.c
        src/gnuwin32/rui.c
        src/gnuwin32/rui.h
        src/gnuwin32/run.c
        src/gnuwin32/run.h
        src/gnuwin32/shext.c
        src/gnuwin32/sys-win32.c
        src/gnuwin32/system.c
        src/gnuwin32/win-nls.h
        src/gnuwin32/windlgs/src/ttest.c
        src/include/Defn.h
        src/include/Errormsg.h
        src/include/Fileio.h
        src/include/Graphics.h
        src/include/GraphicsBase.h
        src/include/IOStuff.h
        src/include/Internal.h
        src/include/Parse.h
        src/include/Print.h
        src/include/R.h
        src/include/R_ext/Applic.h
        src/include/R_ext/Arith.h
        src/include/R_ext/BLAS.h
        src/include/R_ext/Boolean.h
        src/include/R_ext/Callbacks.h
        src/include/R_ext/Complex.h
        src/include/R_ext/Connections.h
        src/include/R_ext/Constants.h
        src/include/R_ext/Error.h
        src/include/R_ext/GetX11Image.h
        src/include/R_ext/GraphicsDevice.h
        src/include/R_ext/GraphicsEngine.h
        src/include/R_ext/Itermacros.h
        src/include/R_ext/Lapack.h
        src/include/R_ext/Linpack.h
        src/include/R_ext/MathThreads.h
        src/include/R_ext/Memory.h
        src/include/R_ext/Parse.h
        src/include/R_ext/Print.h
        src/include/R_ext/PrtUtil.h
        src/include/R_ext/QuartzDevice.h
        src/include/R_ext/R-ftp-http.h
        src/include/R_ext/RS.h
        src/include/R_ext/RStartup.h
        src/include/R_ext/Rallocators.h
        src/include/R_ext/Random.h
        src/include/R_ext/Rdynload.h
        src/include/R_ext/Riconv.h
        src/include/R_ext/Utils.h
        src/include/R_ext/Visibility.h
        src/include/R_ext/eventloop.h
        src/include/R_ext/libextern.h
        src/include/R_ext/stats_package.h
        src/include/R_ext/stats_stubs.h
        src/include/Rconfig.h
        src/include/Rconnections.h
        src/include/Rdefines.h
        src/include/Rdynpriv.h
        src/include/Rembedded.h
        src/include/Rgraphics.h
        src/include/Rinlinedfuns.h
        src/include/Rinterface.h
        src/include/Rinternals.h
        src/include/Rmath.h
        src/include/Rmodules/RX11.h
        src/include/Rmodules/Rinternet.h
        src/include/Rmodules/Rlapack.h
        src/include/Rversion.h
        src/include/S.h
        src/include/Startup.h
        src/include/config.h
        src/include/libintl.h
        src/include/rlocale.h
        src/include/vg/memcheck.h
        src/include/vg/valgrind.h
        src/library/grDevices/src/axis_scales.c
        src/library/grDevices/src/cairo/cairoBM.c
        src/library/grDevices/src/cairo/cairoBM.h
        src/library/grDevices/src/cairo/cairoFns.c
        src/library/grDevices/src/chull.c
        src/library/grDevices/src/colors.c
        src/library/grDevices/src/devCairo.c
        src/library/grDevices/src/devPS.c
        src/library/grDevices/src/devPicTeX.c
        src/library/grDevices/src/devQuartz.c
        src/library/grDevices/src/devWindows.c
        src/library/grDevices/src/devWindows.h
        src/library/grDevices/src/devices.c
        src/library/grDevices/src/grDevices.h
        src/library/grDevices/src/init.c
        src/library/grDevices/src/qdBitmap.c
        src/library/grDevices/src/qdBitmap.h
        src/library/grDevices/src/qdCocoa.h
        src/library/grDevices/src/qdPDF.c
        src/library/grDevices/src/qdPDF.h
        src/library/grDevices/src/stubs.c
        src/library/grDevices/src/winbitmap.c
        src/library/grDevices/src/winbitmap.h
        src/library/graphics/src/base.c
        src/library/graphics/src/graphics.c
        src/library/graphics/src/graphics.h
        src/library/graphics/src/init.c
        src/library/graphics/src/par-common.c
        src/library/graphics/src/par.c
        src/library/graphics/src/plot.c
        src/library/graphics/src/plot3d.c
        src/library/graphics/src/stem.c
        src/library/grid/src/gpar.c
        src/library/grid/src/grid.c
        src/library/grid/src/grid.h
        src/library/grid/src/just.c
        src/library/grid/src/layout.c
        src/library/grid/src/matrix.c
        src/library/grid/src/register.c
        src/library/grid/src/state.c
        src/library/grid/src/unit.c
        src/library/grid/src/util.c
        src/library/grid/src/viewport.c
        src/library/methods/src/RSMethods.h
        src/library/methods/src/class_support.c
        src/library/methods/src/do_substitute_direct.c
        src/library/methods/src/init.c
        src/library/methods/src/methods.h
        src/library/methods/src/methods_list_dispatch.c
        src/library/methods/src/slot.c
        src/library/methods/src/tests.c
        src/library/methods/src/utils.c
        src/library/parallel/src/fork.c
        src/library/parallel/src/glpi.h
        src/library/parallel/src/init.c
        src/library/parallel/src/ncpus.c
        src/library/parallel/src/parallel.h
        src/library/parallel/src/rngstream.c
        src/library/rdt/src/init.c
        src/library/rdt/src/rdt.c
        src/library/rdt/src/rdt.h
        src/library/rdt/src/rdt_debug.cpp
        src/library/rdt/src/rdt_noop.cpp
        src/library/rdt/src/rdt_promises.cpp
        src/library/rdt/src/rdt_trace.cpp
        src/library/splines/src/splines.c
        src/library/stats/src/HoltWinters.c
        src/library/stats/src/PPsum.c
        src/library/stats/src/Srunmed.c
        src/library/stats/src/Trunmed.c
        src/library/stats/src/ansari.c
        src/library/stats/src/approx.c
        src/library/stats/src/arima.c
        src/library/stats/src/bandwidths.c
        src/library/stats/src/burg.c
        src/library/stats/src/chisqsim.c
        src/library/stats/src/complete_cases.c
        src/library/stats/src/cov.c
        src/library/stats/src/d2x2xk.c
        src/library/stats/src/dblcen.c
        src/library/stats/src/deriv.c
        src/library/stats/src/distance.c
        src/library/stats/src/distn.c
        src/library/stats/src/family.c
        src/library/stats/src/fexact.c
        src/library/stats/src/fft.c
        src/library/stats/src/filter.c
        src/library/stats/src/fourier.c
        src/library/stats/src/hclust-utils.c
        src/library/stats/src/influence.c
        src/library/stats/src/init.c
        src/library/stats/src/integrate.c
        src/library/stats/src/isoreg.c
        src/library/stats/src/kendall.c
        src/library/stats/src/kmeans.c
        src/library/stats/src/ks.c
        src/library/stats/src/ksmooth.c
        src/library/stats/src/line.c
        src/library/stats/src/lm.c
        src/library/stats/src/loessc.c
        src/library/stats/src/loglin.c
        src/library/stats/src/lowess.c
        src/library/stats/src/mAR.c
        src/library/stats/src/massdist.c
        src/library/stats/src/model.c
        src/library/stats/src/modreg.h
        src/library/stats/src/monoSpl.c
        src/library/stats/src/nls.c
        src/library/stats/src/nls.h
        src/library/stats/src/nscor.c
        src/library/stats/src/optim.c
        src/library/stats/src/optimize.c
        src/library/stats/src/pacf.c
        src/library/stats/src/port.c
        src/library/stats/src/port.h
        src/library/stats/src/prho.c
        src/library/stats/src/rWishart.c
        src/library/stats/src/random.c
        src/library/stats/src/rcont.c
        src/library/stats/src/sbart.c
        src/library/stats/src/smooth.c
        src/library/stats/src/splines.c
        src/library/stats/src/starma.c
        src/library/stats/src/stats.h
        src/library/stats/src/statsR.h
        src/library/stats/src/swilk.c
        src/library/stats/src/ts.h
        src/library/stats/src/zeroin.c
        src/library/tcltk/src/init.c
        src/library/tcltk/src/tcltk.c
        src/library/tcltk/src/tcltk.h
        src/library/tcltk/src/tcltk_unix.c
        src/library/tcltk/src/tcltk_win.c
        src/library/tools/src/Rmd5.c
        src/library/tools/src/getfmts.c
        src/library/tools/src/gramLatex.c
        src/library/tools/src/gramRd.c
        src/library/tools/src/http.c
        src/library/tools/src/init.c
        src/library/tools/src/install.c
        src/library/tools/src/md5.c
        src/library/tools/src/md5.h
        src/library/tools/src/signals.c
        src/library/tools/src/text.c
        src/library/tools/src/tools.h
        src/library/utils/src/init.c
        src/library/utils/src/io.c
        src/library/utils/src/size.c
        src/library/utils/src/sock.c
        src/library/utils/src/stubs.c
        src/library/utils/src/utils.c
        src/library/utils/src/utils.h
        src/library/utils/src/windows/dataentry.c
        src/library/utils/src/windows/dialogs.c
        src/library/utils/src/windows/registry.c
        src/library/utils/src/windows/util.c
        src/library/utils/src/windows/widgets.c
        src/main/CommandLineArgs.c
        src/main/RBufferUtils.h
        src/main/RNG.c
        src/main/Rdynload.c
        src/main/Renviron.c
        src/main/Rmain.c
        src/main/Rstrptime.h
        src/main/agrep.c
        src/main/alloca.c
        src/main/apply.c
        src/main/arithmetic.c
        src/main/arithmetic.h
        src/main/array.c
        src/main/attrib.c
        src/main/basedecl.h
        src/main/bind.c
        src/main/builtin.c
        src/main/character.c
        src/main/coerce.c
        src/main/colors.c
        src/main/complex.c
        src/main/connections.c
        src/main/context.c
        src/main/contour-common.h
        src/main/cum.c
        src/main/datetime.c
        src/main/datetime.h
        src/main/dcf.c
        src/main/debug.c
        src/main/deparse.c
        src/main/devices.c
        src/main/dotcode.c
        src/main/dounzip.c
        src/main/dstruct.c
        src/main/duplicate.c
        src/main/duplicate.h
        src/main/edit.c
        src/main/engine.c
        src/main/envir.c
        src/main/errors.c
        src/main/eval.c
        src/main/format.c
        src/main/g_alab_her.c
        src/main/g_cntrlify.c
        src/main/g_cntrlify.h
        src/main/g_control.h
        src/main/g_extern.h
        src/main/g_fontdb.c
        src/main/g_her_glyph.c
        src/main/g_her_metr.h
        src/main/g_jis.h
        src/main/gevents.c
        src/main/gram-ex.c
        src/main/gram.c
        src/main/graphics.c
        src/main/grep.c
        src/main/gzio.h
        src/main/identical.c
        src/main/inlined.c
        src/main/inspect.c
        src/main/inspect.h
        src/main/internet.c
        src/main/iosupport.c
        src/main/lapack.c
        src/main/list.c
        src/main/localecharset.c
        src/main/logic.c
        src/main/main.c
        src/main/mapply.c
        src/main/match.c
        src/main/memory.c
        src/main/mkdtemp.c
        src/main/names.c
        src/main/objects.c
        src/main/options.c
        src/main/paste.c
        src/main/platform.c
        src/main/plot.c
        src/main/plot3d.c
        src/main/plotmath.c
        src/main/print.c
        src/main/printarray.c
        src/main/printutils.c
        src/main/printvector.c
        src/main/qsort-body.c
        src/main/qsort.c
        src/main/radixsort.c
        src/main/random.c
        src/main/raw.c
        src/main/rdtrace.c
        src/main/rdtrace.h
        src/main/registration.c
        src/main/relop.c
        src/main/rlocale.c
        src/main/rlocale_data.h
        src/main/saveload.c
        src/main/scan.c
        src/main/seq.c
        src/main/serialize.c
        src/main/sort.c
        src/main/source.c
        src/main/split.c
        src/main/sprintf.c
        src/main/startup.c
        src/main/strdup.c
        src/main/strncasecmp.c
        src/main/subassign.c
        src/main/subscript.c
        src/main/subset.c
        src/main/summary.c
        src/main/sysutils.c
        src/main/times.c
        src/main/unique.c
        src/main/unzip.h
        src/main/util.c
        src/main/valid_utf8.h
        src/main/version.c
        src/main/xspline.c
        src/modules/X11/bitmap.h
        src/modules/X11/dataentry.c
        src/modules/X11/devX11.c
        src/modules/X11/devX11.h
        src/modules/X11/rbitmap.c
        src/modules/X11/rlogo_icon.h
        src/modules/X11/rotated.c
        src/modules/X11/rotated.h
        src/modules/internet/Rhttpd.c
        src/modules/internet/Rsock.c
        src/modules/internet/internet.c
        src/modules/internet/libcurl.c
        src/modules/internet/nanoftp.c
        src/modules/internet/nanohttp.c
        src/modules/internet/sock.c
        src/modules/internet/sock.h
        src/modules/internet/sockconn.c
        src/modules/lapack/Lapack.c
        src/modules/lapack/Lapack.h
        src/modules/lapack/init_win.c
        src/modules/lapack/vecLibg95c.c
        src/nmath/bd0.c
        src/nmath/bessel.h
        src/nmath/bessel_i.c
        src/nmath/bessel_j.c
        src/nmath/bessel_k.c
        src/nmath/bessel_y.c
        src/nmath/beta.c
        src/nmath/chebyshev.c
        src/nmath/choose.c
        src/nmath/cospi.c
        src/nmath/d1mach.c
        src/nmath/dbeta.c
        src/nmath/dbinom.c
        src/nmath/dcauchy.c
        src/nmath/dchisq.c
        src/nmath/dexp.c
        src/nmath/df.c
        src/nmath/dgamma.c
        src/nmath/dgeom.c
        src/nmath/dhyper.c
        src/nmath/dlnorm.c
        src/nmath/dlogis.c
        src/nmath/dnbeta.c
        src/nmath/dnbinom.c
        src/nmath/dnchisq.c
        src/nmath/dnf.c
        src/nmath/dnorm.c
        src/nmath/dnt.c
        src/nmath/dpois.c
        src/nmath/dpq.h
        src/nmath/dt.c
        src/nmath/dunif.c
        src/nmath/dweibull.c
        src/nmath/expm1.c
        src/nmath/fmax2.c
        src/nmath/fmin2.c
        src/nmath/fprec.c
        src/nmath/fround.c
        src/nmath/fsign.c
        src/nmath/ftrunc.c
        src/nmath/gamma.c
        src/nmath/gamma_cody.c
        src/nmath/gammalims.c
        src/nmath/i1mach.c
        src/nmath/imax2.c
        src/nmath/imin2.c
        src/nmath/lbeta.c
        src/nmath/lgamma.c
        src/nmath/lgammacor.c
        src/nmath/log1p.c
        src/nmath/mlutils.c
        src/nmath/nmath.h
        src/nmath/nmath2.h
        src/nmath/pbeta.c
        src/nmath/pbinom.c
        src/nmath/pcauchy.c
        src/nmath/pchisq.c
        src/nmath/pexp.c
        src/nmath/pf.c
        src/nmath/pgamma.c
        src/nmath/pgeom.c
        src/nmath/phyper.c
        src/nmath/plnorm.c
        src/nmath/plogis.c
        src/nmath/pnbeta.c
        src/nmath/pnbinom.c
        src/nmath/pnchisq.c
        src/nmath/pnf.c
        src/nmath/pnorm.c
        src/nmath/pnt.c
        src/nmath/polygamma.c
        src/nmath/ppois.c
        src/nmath/pt.c
        src/nmath/ptukey.c
        src/nmath/punif.c
        src/nmath/pweibull.c
        src/nmath/qbeta.c
        src/nmath/qbinom.c
        src/nmath/qcauchy.c
        src/nmath/qchisq.c
        src/nmath/qexp.c
        src/nmath/qf.c
        src/nmath/qgamma.c
        src/nmath/qgeom.c
        src/nmath/qhyper.c
        src/nmath/qlnorm.c
        src/nmath/qlogis.c
        src/nmath/qnbeta.c
        src/nmath/qnbinom.c
        src/nmath/qnchisq.c
        src/nmath/qnf.c
        src/nmath/qnorm.c
        src/nmath/qnt.c
        src/nmath/qpois.c
        src/nmath/qt.c
        src/nmath/qtukey.c
        src/nmath/qunif.c
        src/nmath/qweibull.c
        src/nmath/rbeta.c
        src/nmath/rbinom.c
        src/nmath/rcauchy.c
        src/nmath/rchisq.c
        src/nmath/rexp.c
        src/nmath/rf.c
        src/nmath/rgamma.c
        src/nmath/rgeom.c
        src/nmath/rhyper.c
        src/nmath/rlnorm.c
        src/nmath/rlogis.c
        src/nmath/rmultinom.c
        src/nmath/rnbinom.c
        src/nmath/rnchisq.c
        src/nmath/rnorm.c
        src/nmath/rpois.c
        src/nmath/rt.c
        src/nmath/runif.c
        src/nmath/rweibull.c
        src/nmath/sexp.c
        src/nmath/sign.c
        src/nmath/signrank.c
        src/nmath/snorm.c
        src/nmath/standalone/sunif.c
        src/nmath/standalone/test.c
        src/nmath/stirlerr.c
        src/nmath/toms708.c
        src/nmath/wilcox.c
        src/unix/Rembedded.c
        src/unix/Rscript.c
        src/unix/Runix.h
        src/unix/X11.c
        src/unix/dynload.c
        src/unix/hpdlfcn.c
        src/unix/hpdlfcn.h
        src/unix/sys-std.c
        src/unix/sys-unix.c
        src/unix/system.c
        src/library/rdt/src/rdt_register_hook.h
        src/library/rdt/src/r.h src/library/rdt/src/rdt_promises/tracer_conf.h
        src/library/rdt/src/rdt_promises/tracer_state.h
        src/library/rdt/src/rdt_promises/tracer_output.h
        src/library/rdt/src/rdt_promises/tracer_sexpinfo.h
        src/library/rdt/src/rdt_promises/tracer_state.cpp
        src/library/rdt/src/rdt_promises/tracer_output.cpp
        src/library/rdt/src/rdt_promises/tracer_sexpinfo.cpp
        src/library/rdt/src/rdt_promises/tracer_conf.cpp
        src/library/rdt/src/rdt_promises/recorder.h
        src/library/rdt/src/rdt_promises/tuple_for_each.h
        src/library/rdt/src/rdt_promises/trace_recorder.h
        src/library/rdt/src/rdt_promises/trace_recorder.cpp
        src/library/rdt/src/rdt_promises/sql_recorder.h
        src/library/rdt/src/rdt_promises/sql_recorder.cpp src/library/rdt/src/rdt_promises/sql_generator.cpp src/library/rdt/src/rdt_promises/sql_generator.h src/library/rdt/src/rdt_promises/multiplexer.cpp src/library/rdt/src/rdt_promises/multiplexer.h)

include_directories(include)
include_directories(include/R_ext)
include_directories(src/include)
include_directories(src/include/R_ext)
include_directories(src/include/Rmodules)
include_directories(src/include/vg)
include_directories(src/main)

add_executable(R_3_3_1 ${SOURCE_FILES})